Header: using float element under a parent clearfix to improve RWD

--- a/twentythirteen-www-tg/Less/bits.less
+++ b/twentythirteen-www-tg/Less/bits.less
@@ -1,5 +1,9 @@
 // -----------------------------------------------------------------------------
 // Header
+// red for vertical linear gradient
+@vertical-gradient-red-start: #EF3B42;
+@vertical-gradient-red-end:   #D61119;
+
 
 // blue for gradient
 @gradient-blue-start: #00d9f0;
@@ -15,7 +19,7 @@
 
 // red for gradient
 @button-color: white;
-@gradient-red-start: #e4420d;
+@gradient-red-start: #E4420d;
 @gradient-red-end:   #D61119;
 
 // tg_why multiple background
