--- a/twentythirteen-www-tg/Less/mixins.less
+++ b/twentythirteen-www-tg/Less/mixins.less
@@ -1,3 +1,28 @@
+/**
+ * Micro clearfix from http://nicolasgallagher.com/micro-clearfix-hack/
+ */
+.cf:before,
+.cf:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+.cf:after {clear: both;}
+.cf {*zoom: 1;}
+
+
+.linear-vertical-gradient (@begin; @end){
+    // from http://www.colorzilla.com/gradient-editor/ 
+    background: @begin; /* Old browsers */
+    background: -webkit-linear-gradient(top, @begin 0%,@end 100%); /* Chrome10+,Safari5.1+ */
+    background:   linear-gradient(to bottom, @begin 0%,@end 100%); /* W3C */
+    background:    -moz-linear-gradient(top, @begin 0%,@end 100%); /* FF3.6+ */
+    background:     -ms-linear-gradient(top, @begin 0%,@end 100%); /* IE10+ */
+    background:      -o-linear-gradient(top, @begin 0%,@end 100%); /* Opera 11.10+ */
+    background:         -webkit-gradient(linear, left top, left bottom, color-stop(0%,@end), color-stop(100%,@end)); /* Chrome,Safari4+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@begin', endColorstr='@end',GradientType=0 ); /* IE6-9 */
+} 
+
+
 .radial-gradient (@begin; @end) {
     // from http://www.colorzilla.com/gradient-editor/ 
     background: @begin; /* Old browsers */
