section Everest: add z-index to button simply to make it usable

--- a/twentythirteen-www-tg/Less/global.less
+++ b/twentythirteen-www-tg/Less/global.less
@@ -223,9 +223,10 @@
 #button_simply {
     .my-font-size(30); //30px
     font-weight:bold;
-    width: 320px;
+    width: 325px;
     padding: 10px 20px 6px;
     position: relative;
+    z-index: 7;
 }
 
 #accessibility_fast {
@@ -442,7 +443,8 @@
         background-image: url(Images/Background/dragon.png),url(Images/Background/dragon_repeat.png);
         background-repeat: no-repeat, repeat-x;
         background-position: 50% 0%, 50% 0%;
-        background-color: transparent;     
+        background-color: transparent;  
+        z-index: 3;
     }
 
     #accessibility_simply {
@@ -456,6 +458,7 @@
         margin-left: -157px;
         vertical-align: 280px;
         display:inline-block;
+        z-index: 6;
 
         h2 {margin:0;}
 
