add compatibility for gradient to IE9

--- a/twentythirteen-www-tg/Less/global.less
+++ b/twentythirteen-www-tg/Less/global.less
@@ -194,7 +194,7 @@
 
 .center {text-align: center;}
 
-#everest_gradiant {.radial-gradient (@gradient-blue-start; @gradient-blue-end);}
+#everest_gradient {.radial-gradient (@gradient-blue-start; @gradient-blue-end);}
 
 #accessibility_simply {
     a {
@@ -423,7 +423,7 @@
         min-width: 100%;
     } 
 
-    #everest_gradiant {min-height: 51rem;} //510px
+    #everest_gradient {min-height: 51rem;} //510px
 
     #everest_filter {
         border-bottom: 490px solid rgba(255, 255, 255, 0.3);
